--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "mocha": "^3.4.2",
     "react-scripts": "1.0.7"
   },
   "scripts": {
