--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react": "^15.6.1",
+    "react-dom": "^15.5.4",
+    "react-height": "^3.0.0"
   },
   "devDependencies": {
+    "chai": "^4.0.2",
+    "chai-enzyme": "^0.7.1",
+    "enzyme": "^2.8.2",
     "mocha": "^3.4.2",
+    "react-addons-test-utils": "^15.6.0",
     "react-scripts": "1.0.7"
   },
   "scripts": {
