--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.5.4",
-    "react-height": "^3.0.0",
+    "react-height": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.0.2",
@@ -14,11 +14,12 @@
     "mocha": "^3.4.2",
     "react-addons-test-utils": "^15.6.0",
     "react-scripts": "1.0.7",
+    "sinon": "^2.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   }
 }
