--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
+    "react-contenteditable": "^2.0.2",
     "react-dom": "^15.5.4",
     "react-height": "^3.0.0"
   },
