--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^4.0.0",
     "react": "^15.6.1",
     "react-contenteditable": "^2.0.2",
     "react-dom": "^15.5.4",
